Fix design zoom left cropping issue

--- a/ee/app/assets/stylesheets/components/design_management/design.scss
+++ b/ee/app/assets/stylesheets/components/design_management/design.scss
@@ -2,7 +2,7 @@
   max-width: 100%;
 }
 
-.design-image-container {
+.design-image-container, .design-scaler {
   margin: auto;
 }
 
